# S_Logowanie

./: .gitignore  CMakeLists.txt  README.md  build-dirty.sh  build.sh  run.sh
src/: main.cpp
src/cpp/: FileLogger.cpp  LoginForm.cpp  MongoDBCollection.cpp  StudentHandler.cpp  TeacherDashboard.cpp  TeacherHandler.cpp  UserHandler.cpp  UserModel.cpp
src/includes/: DatabaseConfig.h  FileLogger.h  Logger.h  LoginForm.h  MongoDBCollection.h  StudentHandler.h  TeacherDashboard.h  TeacherHandler.h  UserHandler.h  UserModel.h
